@@ -1,3 +1,8 @@
+2015-12-21  Even Rouault <even.rouault at spatialys.com>
+
+	* libtiff/tif_dirread.c: workaround false positive warning of Clang Static
+	Analyzer about null pointer dereference in TIFFCheckDirOffset().
+
 2015-12-19  Even Rouault <even.rouault at spatialys.com>
 
 	* libtiff/tif_fax3.c: remove dead assignment in Fax3PutEOLgdal(). Found
